*SVN*

* Add custom mime type file for mongrel.  config/mime.yml is added with generated apps from the rails command.  [Rick Olson]

* Update to Prototype 1.5.0_rc2 [5550] which makes it work in Opera again [Thomas Fuchs]

* Make sure that exceptions which are thrown outside of the user code try their best to be handeled in ApplicationController#rescue_action [Tobias Luetke]

* Rails::VERSION::STRING should always be available without having to require 'rails/version'.  #6244 [fearoffish]

* Update to Prototype 1.5.0_rc2. [Sam Stephenson]

* Add grep-based fallback to reaper, to work in pidless setups [Jamis Buck]

* Only wrap request processing with our USR1 signal handler so FastCGI can trap it and raise an exception while waiting for connections. Idle processes exit immediately rather than waiting for another request; active processes gracefully exit when the request is finished.  [Jeremy Kemper]

* Alter prior change to use require_dependency instead of require_or_load. Causes ApplicationController to be reloaded again. Closes #6587. [Nicholas Seckar]

* Rake: use absolute paths to load lib and vendor tasks so they may be run outside of RAILS_ROOT.  #6584 [jchris]

* Remove temporary crutch to help ApplicationController be unloaded. Closes #6496. [Nicholas Seckar]

* scaffold_resource generator uses _path named routes and head instead of render :nothing => true.  #6545 [Josh Susser]

* Generator can show diff on file collision to help you decide whether to skip or overwrite.  #6364 [jeffw, Jeremy Kemper]

* Generated directories are recursively svn added, like mkdir -p.  #6416 [NeilW]

* resource and scaffold_resource generators add a restful route to config/routes.rb  [Jeremy Kemper]

* Revert environment changes for autoload_paths. [Koz]

* Update to latest Prototype, which doesn't serialize disabled form elements, adds clone() to arrays, empty/non-string Element.update() and adds a fixes excessive error reporting in WebKit beta versions [Thomas Fuchs]
