@@ -1,5 +1,7 @@
 *SVN*
 
+* Use custom mime file for script/server mongrel if config/mime.yml exists.  Pass --mime=other/path for a custom mime file.  [Rick Olson]
+
 * Add custom mime type file for mongrel.  config/mime.yml is added with generated apps from the rails command.  [Rick Olson]
 
 * Update to Prototype 1.5.0_rc2 [5550] which makes it work in Opera again [Thomas Fuchs]
